refactor: use toList() instead of collect(Collectors.toList()) in getCategoryList